<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android" android:title="@string/preferenceName">
    <PreferenceCategory android:title="@string/preference_account_category">
        <ListPreference android:title="@string/preference_chooseAccount" android:defaultValue="0" android:key="@string/preference_accountchoose_key"></ListPreference>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/preferences_import_directory">
        <Preference android:key="@string/preference_import_key"></Preference>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/preferences_export_directory">
        <Preference android:key="@string/preference_export_key"></Preference>
    </PreferenceCategory>
</PreferenceScreen>
